--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="icon-192.png">
     <link rel="apple-touch-icon" href="icon-192.png">
     <meta name="theme-color" content="#000000">
+    <script defer src="https://cdn.vercel-insights.com/v1/script.js"></script>
     <style>
         body {
             background: #000;
